# mio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: benchmark.h  hw_prefetcher.h  latency_measure.h  numa_affinity.h  output.h  tracing.h
scripts/: commands.md  run.sh  run_benchmark.py  setup.sh
src/: benchmark.cpp  hw_prefetcher.cpp  latency_measure.cpp  main.cpp  numa_affinity.cpp  output.cpp  tracing.cpp
